# agent-keychain

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  install.py  pyproject.toml  requirements.txt  store_credential.py
.github/workflows/: test.yml
poc/: agent_credential_exposure.py  credential_scanner.py  demo_credential_guard.py  demo_memory_scrubbing.py  demo_process_isolation.py  demo_token_expiry.py
poc/fake_credentials/: .bashrc  .env  .gitconfig  .npmrc
poc/fake_credentials/.aws/: config
poc/fake_credentials/.kube/: config
poc/fake_credentials/.ssh/: id_rsa  id_rsa.pub
poc/fake_credentials/projects/my-webapp/: .env
src/: cli.py
src/guard/: credential_guard.py
src/hooks/: credential-guard.sh
src/logging/: logger.py
src/mcp_server/: server.py
src/proxy/: intent_proxy.py  isolated_request.py  process_pool.py
src/vault/: keychain_vault.py  secure_string.py
tests/: test_guard.py  test_mcp_server.py  test_secure_string.py  test_vault.py
